fixed products width and overflow

--- a/public/css/global.scss
+++ b/public/css/global.scss
@@ -21,7 +21,7 @@ main {
 }
 
 .main-section {
-  //height:calc(100vh - 50px);
+  height:calc(100vh - 50px);
   //position:relative;
   // .col-9 {
   //   padding-right: 0;
